Change log of the development of SOMA.
Please add your contributions.

	v0.6.0 not-yet-released

	* New function for independent sets calculation (suitable for networks)

	v0.6.1 not-yet-released

	* Minor Typo in README		Ludwig Schneider

	v0.5.0 released 11/9/17
	* first public version		Ludwig Schneider