@@ -3,7 +3,9 @@ Please add your contributions.
 
 	v0.6.0 not-yet-released
 
-	* New function for independent sets calculation (suitable for networks)
+	* A second option for independent
+	  sets calculation
+	  (suitable for networks)       Gaoyuan Wang
 
 	v0.6.1 not-yet-released
 
